unidad4/ejemplos/ejemplo10/ds.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: logging
spec:
 template:
   metadata:
     labels:
       app: logging-app
   spec:
     containers:
       - name: webserver
         image: nginx
         ports:
         - containerPort: 80
