unidad4/ejemplos/ejemplo10/wordpress-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: wordpress-ingress
  labels:
    app: wordpress
    type: frontend
spec:
  rules:
  - host: wp.192.168.99.100.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress-service
          servicePort: http-sv-port
