unidad4/ejemplos/ejemplo10/wordpress-ingress_1_19.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    app: wordpress
    type: frontend
spec:
  rules:
  - host: wp.192.168.99.100.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress-service
            port:
              name: http-sv-port
